--- a/.github/workflows/branch_constraint.yml
+++ b/.github/workflows/branch_constraint.yml
@@ -12,9 +12,10 @@ jobs:
     - name: Print source branch
       env: 
         SOURCE_BRANCH: ${{ github.event.pull_request.head.ref }}
+        SOURCE_REPOSITORY: ${{ github.event.pull_request.head.repository }}
         TARGET_BRANCH: ${{ github.base_ref }}
-        REPOSITORY: ${{ github.repository }}
+        TARGET_REPOSITORY: ${{ github.repository }}
       run: |
         echo "$SOURCE_BRANCH"
         echo "$TARGET_BRANCH"
-        echo "$REPOSITORY"
+        echo "$TARGET_REPOSITORY"
