--- a/.github/workflows/branch_constraint.yml
+++ b/.github/workflows/branch_constraint.yml
@@ -12,7 +12,11 @@ jobs:
     - name: Print source branch
       env: 
         SOURCE_BRANCH: ${{ github.event.pull_request.head.ref }}
+        SOURCE_REPOSITORY: ${{ github.event.pull_request.head.repository }}
         TARGET_BRANCH: ${{ github.base_ref }}
+        TARGET_REPOSITORY: ${{ github.repository }}
       run: |
         echo "$SOURCE_BRANCH"
+        echo "$SOURCE_REPOSITORY"
         echo "$TARGET_BRANCH"
+        echo "$TARGET_REPOSITORY"
